bug#58895 InnoDB: Failing assertion: UT_LIST_GET_LEN(buf_pool->flush_list) == 0

A race introduced by page_cleaner patch where it is possible to miss
the final round of flushing if the page_cleaner has an unfinished batch
already running from previous phase.

Approved by: Sunny